--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
             </div>
     </div>
     <div class="footer">
-        <p>&copy; 2023 My Web Page</p>
+        <ul class="social-links">
+            <li><a href="#" target="_blank"><img src="img/icon/telegram.png" alt="Image"></a></li>
+            <li><a href="#" target="_blank"><img src="img/icon/twitter.png" alt="Image"></a></li>
+            <li><a href="#" target="_blank"><img src="img/icon/instagram.png" alt="Image"></a></li>
+            <li><a href="#" target="_blank"><img src="img/icon/tiktok.png" alt="Image"></a></li>
+            <li><a href="#" target="_blank"><img src="img/icon/youtube.png" alt="Image"></a></li>
+            <li><a href="#" target="_blank"><img src="img/icon/facebook.png" alt="Image"></a></li>
+            <li><a href="#" target="_blank"><img src="img/icon/discord.png" alt="Image"></a></li>
+          </ul>
     </div>
 
 </div>
